src/tui/tests/snapshots/bmm__tui__tests__bookmarks__bookmark_details_show_missing_values.snap
---
source: src/tui/tests/bookmarks.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (1)                                                                               "
"                                                                                                "
"> https://example.com/                                                                          "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://example.com/                                                                 │"
"│ Title : <NOT SET>                                                                            │"
"│ Tags  : <NOT SET>                                                                            │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
