src/tui/tests/snapshots/bmm__tui__tests__bookmarks__moving_to_the_next_bookmark_updates_the_selection.snap
---
source: src/tui/tests/bookmarks.rs
expression: terminal.backend()
---
"                                                                                                "
"   bookmarks  (2)                                                                               "
"                                                                                                "
"  https://example.com/01                                                                        "
"> https://example.com/02                                                                        "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│ URI   : https://example.com/02                                                               │"
"│ Title : Bookmark 02                                                                          │"
"│ Tags  : example                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm                                                                                            "
